main.py launched from callProgram.java