@@ -1,43 +1,61 @@
 package gui;
 
+import javax.xml.stream.events.Comment;
 import java.io.IOException;
 
 import java.io.*;
+import java.util.*;
 
 public class callProgram {
-    public static void main(String[] args) {
-        //runCommand("1234","im just rly sorry ok");
 
-        String[] command = new String[] {"/bin/zsh","-c", "python3 python/test.py main"};
-        try {
-            Process p = Runtime.getRuntime().exec(command);
-            printResults(p);
 
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-
+    public static void main(String[] args) throws IOException {
+        runMainPY("1234","bcuz");
 
     }
+
 
     public static void printResults(Process process) throws IOException {
-        BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-        String line = "";
-        while ((line = reader.readLine()) != null) {
-            System.out.println(line);
+        BufferedReader stdInput = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        String s = null;
+        while ((s = stdInput.readLine()) != null)
+        {
+            System.out.println(s);
         }
     }
 
-    public static void runCommand(String ID, String reason) {
-        String[] command = new String[] {"/bin/zsh","-c", "python3 python/main.py main --bool_inp=True --ID="+ID+" --apolo='"+ reason +"'"};
+
+
+    public static void runMainPY(String ID, String reason) {
         try {
-            //Process proc = new ProcessBuilder(command).start();
-            //Process p = Runtime.getRuntime().exec(command);
+            String[] command = new String[] {"/bin/zsh","-c","cd python && source venv/bin/activate && python main.py main --bool_inp=True --ID='"+ID+"' --apolo='"+reason+"'" };
+            Process p = Runtime.getRuntime().exec(command);
+
+            printResults(p);
+            System.out.println(p.getErrorStream());
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+    /*
+
+    public static void Venv(){
+        try {
             Process p = Runtime.getRuntime().exec(command);
             printResults(p);
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
-
+    public static void correctDir(){
+        String[] command = new String[] {"/bin/zsh","-c", "cd python"};
+        try {
+            Process p = Runtime.getRuntime().exec(command);
+            printResults(p);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+    */
 }
